fix(stylesheet): is typing alignment

--- a/assets/stylesheets/generic/_mixins.less
+++ b/assets/stylesheets/generic/_mixins.less
@@ -234,11 +234,11 @@
         &:after {
           content: "\25cf\25cf\25cf";
           position: relative;
-          top: -17px;
+          top: -18px;
           color: @gray-lighter;
           font-size: 14px;
           padding: 2px;
-          animation: typing 1s ease infinite;
+          animation: typing 1s linear infinite;
         }
       }
     }
